[gd_scene load_steps=3 format=3 uid="uid://cdc56lh434xix"]

[ext_resource type="PackedScene" uid="uid://bnyly0xy2l6ft" path="res://entity/entity_base.tscn" id="1_y01cf"]
[ext_resource type="Script" path="res://entity/enemy/enemy_base.gd" id="2_bfl4e"]

[node name="EnemyBase" groups=["enemies"] instance=ExtResource("1_y01cf")]
script = ExtResource("2_bfl4e")
detect_range = 0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="2"]

[node name="PlayerDetectRay" type="RayCast3D" parent="." index="3"]
target_position = Vector3(0, 0, -10)

[node name="PlayerDetectRay2" type="RayCast3D" parent="." index="4"]
transform = Transform3D(0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, 0, 0, 0)
target_position = Vector3(0, 0, -10)

[node name="PlayerDetectRay3" type="RayCast3D" parent="." index="5"]
transform = Transform3D(0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 0, 0, 0)
target_position = Vector3(0, 0, -10)
